styles.css
*{
    margin: 0;
    padding: 0;
    box-sizing: border-box;
}

section{
    background-color: #5722CD;
}

.navbar{
    display: flex;
    flex-direction: row;
    justify-content: flex-end;
    align-items: center;
}

ul{
    display: flex;
    list-style-type: none;
    flex-direction: row;
    justify-content: space-between;
    flex-shrink: 0;
    flex-grow: 0;
    flex-basis: 300px;

}







/*
All colors used throughout the text
Paars #5722CD;
Blauw #4845E4;
Roze #ED4385;
Zwart #0C0C0C (voor standaard tekst);
Lichtpaars #F2F0FF (voor de grote zwevende woorden, zoals "hello" en "services") Uitzonderingen:
Lichtgrijs #F3F6F9 (voor de achtergrond van de projecten)
Grijs #7A7A7A (voor de service-tegel tekst);
*/



/*////////////////////////
    Table of Contents
    1. Global Styles
    2. Typography
    3. Layout
        3.1 Reusables
        3.2 Other
    4. Areas
        4.1 Header
        4.2 Introduction
        etc.
    5. Media Queries
////////////////////////*/

/* ------------------------------- 1. Global Styles -------------------------------- */

/* ------------------------------- 2. Typography ----------------------------------- */

/* ------------------------------- 3. Layout --------------------------------------- */

/* --------------- 3.1 Reusables ----------------------- */

/* --------------- 3.2 Other --------------------------- */

/* ------------------------------- 4. Areas ---------------------------------------- */

/* --------------- 4.1 Header ------------------------- */

/* --------------- 4.2 Introduction ------------------- */

/* ------------------------------- 5. Media Queries -------------------------------- */

